# azure-web-pricing

./: .gitignore  AzurePricing.py  FLUJO.md  README.md  agent.md  package.json  pyproject.toml  requirements.txt
config/: config.yaml  logging.conf
src/: __init__.py
src/agent/: __init__.py
src/core/: __init__.py  azure_client.py  cache.py  models.py
src/interfaces/: __init__.py  cli.py
src/mcp_server/: __init__.py  schemas.py  server.py
src/mcp_server/tools/: __init__.py  pricing.py
src/reports/: __init__.py  excel_generator.py  pdf_generator.py
src/visualization/: __init__.py  charts.py  diagrams.py
tests/: __init__.py
